2013-09-11  Murray Stokely  <mstokely@FreeBSD.org>

	* configure.in: If pkg-config is not available add -lprotobuf to
	  PKG_LIBS.  This makes it easier to install on MacOS X 10.8, for
	  example.

2013-09-06  Murray Stokely  <murray@FreeBSD.org>

	* src/rprotobuf.cpp (rprotobuf): Include the name of the field
	  that could not be found in exceptions in getFieldDescriptor
	  (errors from update / new, etc.).

2013-09-03  Murray Stokely  <murray@FreeBSD.org>

	* inst/NEWS.Rd: Summarize changes since the last release.
	* vignettes/RProtoBuf/RProtoBuf.Rnw: Add a new section on 64-bit
	  issues, document the RProtoBuf.int64AsString option, break out the
	  'other approaches' section from the 'future work', and fix a few
	  typos.

2013-08-30  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Import 'file_path_as_absolute' from package tools, and
	  the two functions needed from the RCurl package
	* R/*R: Updated several files which no longer need 'tools:::' prefix 
	* DESCRIPTION: Updated Depends: and Imports accordingly

2013-08-29  Murray Stokely  <murray@FreeBSD.org>

	* R/zzz.R (.onLoad): Rename option controlling int64 handling with
	  package name prefix.
	* inst/unitTests/runit.int64.R (test.int64): Idem
	* src/extractors.cpp (rprotobuf): Add templated function to reduce
	  code duplication in last changelist.
	* src/mutators.cpp (rprotobuf): Idem

2013-08-27  Murray Stokely  <murray@FreeBSD.org>

	* src/extractors.cpp (rprotobuf): Add support for a new
	  option("int64AsString") that controls whether extractors for
	  64-bit integer fields return character strings or use Rcpp's
	  default wrap type which coerces to numeric, possibly losing
	  precision.
	* R/zzz.R (.onLoad): Initialize options("int64AsString" = FALSE).
	* src/Rcppsupport.h (rprotobuf): Add RepeatedFieldImporter classes
	  for int64 and uint64 that return strings instead of int64s.
	* src/mutators.cpp (rprotobuf): Add support for setting int64